# gert-auto-clicker

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
scripts/: build-static-windows.bat  build-windows.sh  build.bat  build.sh
src/: autoclicker.cpp  autoclicker.h  clickerthread.cpp  clickerthread.h  hotkeymanager.cpp  hotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  types.h
